@@ -216,6 +216,30 @@ CMPIStatus ProfileProviderExecQuery(
   _SFCB_RETURN(st);
 }
 
+CMPIStatus
+ProfileProviderInvokeMethod(CMPIMethodMI * mi,
+			    const CMPIContext *ctx,
+			    const CMPIResult *rslt,
+			    const CMPIObjectPath * ref,
+			    const char *methodName,
+			    const CMPIArgs * in, CMPIArgs * out)
+{
+  _SFCB_ENTER(TRACE_INDPROVIDER, "ProfileProviderInvokeMethod");
+  CMPIStatus      st = { CMPI_RC_ERR_NOT_SUPPORTED, NULL };
+  if (strcmp(methodName, "_startup"))
+    st.rc = CMPI_RC_OK;
+  _SFCB_RETURN(st);
+}
+
+CMPIStatus ProfileProviderMethodCleanup(CMPIMethodMI * mi,
+                                        const CMPIContext * ctx, CMPIBoolean terminate)
+{
+  CMPIStatus st = { CMPI_RC_OK, NULL };
+  _SFCB_ENTER(TRACE_INDPROVIDER, "ProfileProviderMethodCleanup");
+  _SFCB_RETURN(st);
+}
+
+
 /* ------------------------------------------------------------------ *
  * Instance MI Factory
  *
@@ -225,3 +249,4 @@ CMPIStatus ProfileProviderExecQuery(
  * ------------------------------------------------------------------ */
 
 CMInstanceMIStub(ProfileProvider, ProfileProvider, _broker, CMNoHook); 
+CMIMethodMIStub(ProfileProvider, ProfileProvider, _broker, CMNoHook); 
